--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "typescript_projects",
+  "name": "hamza-calculator_project",
   "version": "1.0.0",
   "description": "Typescript mini projects!",
-  "main": "index.js",
+  "main": "./01_Calculator_project/ES_Calculator/index.js",
   "type": "module",
+  "bin": "./01_Calculator_project/ES_Calculator/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.3.0",
+    "chalk-animation": "^2.0.3",
     "inquirer": "^9.2.10",
+    "node-banner": "^1.4.0",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
+    "@types/chalk-animation": "^1.6.1",
     "@types/inquirer": "^9.0.3",
     "@types/prompt-sync": "^4.2.0"
   }
