--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
+    "hamza-calculator_project": "^1.0.0",
     "inquirer": "^9.2.10",
     "node-banner": "^1.4.0",
     "prompt-sync": "^4.2.0"
